[tool.poetry]
name = "мой проект"
version = "0.1.0"
description = ""
authors = ["Александр"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.111.1"}
sqlalchemy = "^2.0.31"
asyncpg = "^0.29.0"
pytest-asyncio = "^0.24.0"
redis = "^5.1.1"
pyjwt = {extras = ["crypto"], version = "^2.9.0"}
bcrypt = "^4.2.0"
aioredis = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
